added variables for weatherApi points, updated weather function and appended html

--- a/index.html
+++ b/index.html
@@ -39,18 +39,24 @@
 
             <div class="col-md-9">
                 <main>
-                    <div class="row row-col-md-5">
-                        <div class="card border-primary col-md-12 mb-3">
+                    <div class = "todayWeather">
+
+                    </div>
+                    <!-- <div class="row row-col-md-5"> -->
+                        <!-- <div class="card border-primary col-md-12 mb-3">
                             <div class="card-header">Display City, Date, and Weather Icon</div>
                             <div class="card-body text-primary">
                                 <h5 class="card-title">Primary card title</h5>
                                 <p class="card-text">Some quick example text to build on the card title and make up the
                                     bulk of the card's content.</p>
                             </div>
-                        </div>
-                    </div>
+                        </div> -->
+                    <!-- </div> -->
                     <h1>5 Day Forcast</h1>
-                    <div class="row row-cols-1 row-cols-md-5">
+                    <div class = "forecast">
+                        
+                    </div>
+                    <!-- <div class="row row-cols-1 row-cols-md-5">
                         <div class="card text-white bg-primary mb-3" style="max-width: 18rem;">
                             <div class="card-header">Day 1</div>
                             <div class="card-body">
@@ -86,7 +92,7 @@
                                     bulk of the card's content.</p>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                 </main>
             </div>
         </div>
