--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
 
             <div class="col-md-9">
                 <main>
-                    <div class = "todayWeather">
+                    <div class="todayWeather">
 
                     </div>
                     <!-- <div class="row row-col-md-5"> -->
-                        <!-- <div class="card border-primary col-md-12 mb-3">
+                    <!-- <div class="card border-primary col-md-12 mb-3">
                             <div class="card-header">Display City, Date, and Weather Icon</div>
                             <div class="card-body text-primary">
                                 <h5 class="card-title">Primary card title</h5>
@@ -53,51 +53,51 @@
                         </div> -->
                     <!-- </div> -->
                     <h1>5 Day Forcast</h1>
-                    <div class = "forecast">
+                    <div class="forecast">
 
                     </div>
-                    <!-- <div class="row row-cols-1 row-cols-md-5">
+                    <div class="row row-cols-1 row-cols-md-5">
                         <div class="card text-white bg-primary mb-3" style="max-width: 18rem;">
                             <div class="card-header">Day 1</div>
                             <div class="card-body">
-                                <p class="card-text">Some quick example text to build on the card title and make up the
+                                <p id="day0" class="card-text">Some quick example text to build on the card title and make up the
                                     bulk of the card's content.</p>
                             </div>
                         </div>
                         <div class="card text-white bg-primary mb-3" style="max-width: 18rem;">
                             <div class="card-header">Day 2</div>
                             <div class="card-body">
-                                <p class="card-text">Some quick example text to build on the card title and make up the
+                                <p id="day1" class="card-text">Some quick example text to build on the card title and make up the
                                     bulk of the card's content.</p>
                             </div>
                         </div>
                         <div class="card text-white bg-primary mb-3" style="max-width: 18rem;">
                             <div class="card-header">Day 3</div>
                             <div class="card-body">
-                                <p class="card-text">Some quick example text to build on the card title and make up the
+                                <p id="day2" class="card-text">Some quick example text to build on the card title and make up the
                                     bulk of the card's content.</p>
                             </div>
                         </div>
                         <div class="card text-white bg-primary mb-3" style="max-width: 18rem;">
                             <div class="card-header">Day 4</div>
                             <div class="card-body">
-                                <p class="card-text">Some quick example text to build on the card title and make up the
+                                <p id="day3" class="card-text">Some quick example text to build on the card title and make up the
                                     bulk of the card's content.</p>
                             </div>
                         </div>
                         <div class="card text-white bg-primary mb-3" style="max-width: 18rem;">
                             <div class="card-header">Day 5</div>
                             <div class="card-body">
-                                <p class="card-text">Some quick example text to build on the card title and make up the
+                                <p id="day4" class="card-text">Some quick example text to build on the card title and make up the
                                     bulk of the card's content.</p>
                             </div>
                         </div>
-                    </div> -->
+                    </div>
                 </main>
             </div>
         </div>
     </div>
-    
+
     </div>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
@@ -105,6 +105,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
         crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <script src="./assets/js/script.js"></script>
 </body>
 
